--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/svg.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/svgA.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>adivoz-project</title>
+    <title>Adivoz - Digital Solutions</title>
   </head>
   <body>
     <div id="root"></div>
